--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -10,6 +10,8 @@ steps:
     steps:
       - label: "Carthage"
         command: ./features/fixtures/carthage/build.sh
+        env:
+          - DEVELOPER_DIR: /Applications/Xcode14.app
 
       - label: "CocoaPods"
         command: pod lib lint BugsnagPerformance.podspec.json
