--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -46,6 +46,13 @@ steps:
 
   - group: ":xcode_simulator: Unit Tests"
     steps:
+      - label: "iOS 16 Unit Tests"
+        commands:
+          - ./scripts/run-unit-tests.sh PLATFORM=iOS OS=16.0
+        plugins:
+          artifacts#v1.5.0:
+            upload:
+              - "logs/*"
       - label: "iOS 15 Unit Tests"
         commands:
           - ./scripts/run-unit-tests.sh PLATFORM=iOS OS=15.0
@@ -53,6 +60,22 @@ steps:
           artifacts#v1.5.0:
             upload:
               - "logs/*"
+      - label: "iOS 14 Unit Tests"
+        commands:
+          - ./scripts/run-unit-tests.sh PLATFORM=iOS OS=14.5
+        plugins:
+          artifacts#v1.5.0:
+            upload:
+              - "logs/*"
+      - label: "iOS 13 Unit Tests"
+        commands:
+          - ./scripts/run-unit-tests.sh PLATFORM=iOS OS=13.0
+        plugins:
+          artifacts#v1.5.0:
+            upload:
+              - "logs/*"
+        agents:
+          queue: macos-11
       - label: "iOS 12 Unit Tests"
         commands:
           - ./scripts/run-unit-tests.sh PLATFORM=iOS OS=12.4
@@ -60,6 +83,17 @@ steps:
           artifacts#v1.5.0:
             upload:
               - "logs/*"
+        agents:
+          queue: macos-11
+      - label: "iOS 11 Unit Tests"
+        commands:
+          - ./scripts/run-unit-tests.sh PLATFORM=iOS OS=11.4
+        plugins:
+          artifacts#v1.5.0:
+            upload:
+              - "logs/*"
+        agents:
+          queue: macos-11
 
   - group: ":iphone: E2E Tests"
     steps:
