--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -53,6 +53,8 @@ steps:
           artifacts#v1.5.0:
             upload:
               - "logs/*"
+        agents:
+          queue: macos-13
       - label: "iOS 15 Unit Tests"
         commands:
           - ./scripts/run-unit-tests.sh PLATFORM=iOS OS=15.0
@@ -69,7 +71,7 @@ steps:
               - "logs/*"
       - label: "iOS 13 Unit Tests"
         commands:
-          - ./scripts/run-unit-tests.sh PLATFORM=iOS OS=13.0
+          - ./scripts/run-unit-tests.sh PLATFORM=iOS OS=13.7
         plugins:
           artifacts#v1.5.0:
             upload:
