--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -48,7 +48,7 @@ steps:
     steps:
       - label: "iOS 15 Unit Tests"
         commands:
-          - ./scripts/run-unit-tests.sh PLATFORM=iOS OS=15.0 DEVICE=iPhone 13
+          - ./scripts/run-unit-tests.sh PLATFORM=iOS OS=15.0 DEVICE="iPhone 13"
         plugins:
           artifacts#v1.5.0:
             upload:
